welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:19: error: not found: value sortieTrouvée
} while (!sortieTrouvée)
          ^